--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <main class = "grid">
-	<nav id = "navbar"></nav>
+	<nav id = "navbar">
+		<a href = "#welcome-section">Welcome</a>
+		<a href = "#projects">Projects</a>
+		<a href = "#profile-link">Contact</a>
+	</nav>
 	<header id = "welcome-section"></header>
 	<article id = "projects"></article>
 	<footer id = "socials"></footer>
