--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 		<a href = "#projects">Projects</a>
 		<a href = "#profile-link">Contact</a>
 	</nav>
-	<header id = "welcome-section"></header>
-	<article id = "projects"></article>
+	<header id = "welcome-section">
+		<h1>Hi, I'm Michael<br></h1>
+		<h2>I'm an aspiring software developer</h2><br>
+	</header>
+	<article id = "projects">
+		
+	</article>
 	<footer id = "socials"></footer>
 </main>
