--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>I'm an aspiring software developer</h2><br>
 	</header>
 	<article id = "projects">
-		
+		<h3>Here are some of my recent projects</h3>
 	</article>
 	<footer id = "socials"></footer>
 </main>
