--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	</header>
 	<article id = "projects">
 		<h3>Here are some of my recent projects</h3>
+		<br><h3 class = "project-title"><a href="https://codepen.io/mjow1999/pen/mdEdXPE" target="_blank">TDCC Tribute Page</a></h3>
+		<p id = "project-description">One stop shop for all things Two Door Cinema Club!</p><br>
 	</article>
 	<footer id = "socials"></footer>
 </main>
