Projects: Anime Survey

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<h3>Here are some of my recent projects</h3>
 		<br><h3 class = "project-title"><a href="https://codepen.io/mjow1999/pen/mdEdXPE" target="_blank">TDCC Tribute Page</a></h3>
 		<p id = "project-description">One stop shop for all things Two Door Cinema Club!</p><br>
+		<h3 class = "project-title"><a href = "https://codepen.io/mjow1999/pen/rNLOVqr" target="_blank">Anime Survey</a></h3>
+		<p id = "project-description">What type of anime do you like? Take part in my survey!</p><br>
 	</article>
 	<footer id = "socials"></footer>
 </main>
