Projects: FAC Application

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<p id = "project-description">One stop shop for all things Two Door Cinema Club!</p><br>
 		<h3 class = "project-title"><a href = "https://codepen.io/mjow1999/pen/rNLOVqr" target="_blank">Anime Survey</a></h3>
 		<p id = "project-description">What type of anime do you like? Take part in my survey!</p><br>
+		<h3 class = "project-title"><a href = "https://mjow1999.github.io/MJOW1999.github.io/FAC-Website/index.html" target="_blank">FAC Application</a></h3>
+		<p id = "project-description">A recent application to the Founders and Coders course!</p><br>
 	</article>
 	<footer id = "socials"></footer>
 </main>
