HTML and CSS Technical Documentation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 		<p id = "project-description">What type of anime do you like? Take part in my survey!</p><br>
 		<h3 class = "project-title"><a href = "https://mjow1999.github.io/MJOW1999.github.io/FAC-Website/index.html" target="_blank">FAC Application</a></h3>
 		<p id = "project-description">A recent application to the Founders and Coders course!</p><br>
+		<h3 class = "project-title"><a href="https://codepen.io/mjow1999/pen/RwRordG" target="_blank">HTML and CSS Technical Documentation</a></h3>
+		<p id = "project-description">Simple introduction to HTML basics and CSS.</p><br><br><br>
 	</article>
 	<footer id = "socials"></footer>
 </main>
