--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 		<h3 class = "project-title"><a href="https://codepen.io/mjow1999/pen/RwRordG" target="_blank">HTML and CSS Technical Documentation</a></h3>
 		<p id = "project-description">Simple introduction to HTML basics and CSS.</p><br><br><br>
 	</article>
-	<footer id = "socials"></footer>
+	<footer id = "socials">
+		If you would like to connect with me further, here are my social media details: <br><br>
+	</footer>
 </main>
