Footer: GitHub link

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 	</article>
 	<footer id = "socials">
 		If you would like to connect with me further, here are my social media details: <br><br>
+		<a href = "https://github.com/MJOW1999" class="fa fa-github" id="profile-link" target="_blank"></a>
 	</footer>
 </main>
