--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 	<footer id = "socials">
 		If you would like to connect with me further, here are my social media details: <br><br>
 		<a href = "https://github.com/MJOW1999" class="fa fa-github" id="profile-link" target="_blank"></a>
+		<a href = "https://codepen.io/mjow1999" class="fa fa-codepen" id="profile-link" target="_blank"></a>
 	</footer>
 </main>
