Footer: Linkedin link

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 		If you would like to connect with me further, here are my social media details: <br><br>
 		<a href = "https://github.com/MJOW1999" class="fa fa-github" id="profile-link" target="_blank"></a>
 		<a href = "https://codepen.io/mjow1999" class="fa fa-codepen" id="profile-link" target="_blank"></a>
+		<a href = "https://www.linkedin.com/in/michael-williams-17a9b81a0/" class="fa fa-linkedin" id="profile-link" target="_blank"></a>
 	</footer>
 </main>
